Fix logo visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,6 @@ body {
 }
 
 .navbar #logo img {
-  display: none;
   width: 64px;
 }
 
